uuidとtokenの表示修正

--- a/manage/views/index.html
+++ b/manage/views/index.html
@@ -7,6 +7,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <title>IDCFチャンネルサーバー管理</title>
     <link rel="stylesheet" href="/css/vendor.css">
+    <link rel="stylesheet" href="/css/bundle.css">
   </head>
   <body>
     <div class="statusbar-overlay"></div>
@@ -47,7 +48,6 @@
       </div>
     </div>
 </div>
-<script src="https://maps.google.com/maps/api/js?libraries=places&sensor=true"></script>
 <script type="text/javascript" src="/js/vendor.js"></script>
 <script type="text/javascript" src="/js/bundle.js"></script>
 </body>
