--- a/manage/views/devices.html
+++ b/manage/views/devices.html
@@ -18,15 +18,15 @@
       <div class="list-block">
         <div class="list-group">
           <ul>
-            <li class="list-group-title">Owner</li>
+            <li class="list-group-title">owner uuid</li>
             <li class="item-content">
-              <div class="item-inner">
-                <div class="item-title">uuid</div>
+              <div class="item-inner device-item">
+                <div class="item-title"></div>
                 <div class="item-after" id="owner-uuid"></div>
               </div>
             </li>
             <li class="item-content">
-              <div class="item-inner">
+              <div class="item-inner device-item">
                 <div class="item-title">token</div>
                 <div class="item-after" id="owner-token"></div>
               </div>
@@ -36,15 +36,15 @@
 
         <div class="list-group">
           <ul>
-            <li class="list-group-title">trigger-1</li>
+            <li class="list-group-title">trigger-1 uuid</li>
             <li class="item-content">
-              <div class="item-inner">
-                <div class="item-title">uuid</div>
+              <div class="item-inner device-item">
+                <div class="item-title"></div>
                 <div class="item-after" id="trigger-1-uuid"></div>
               </div>
             </li>
             <li class="item-content">
-              <div class="item-inner">
+              <div class="item-inner device-item">
                 <div class="item-title">token</div>
                 <div class="item-after" id="trigger-1-token"></div>
               </div>
@@ -54,22 +54,21 @@
 
         <div class="list-group">
           <ul>
-            <li class="list-group-title">action-1</li>
+            <li class="list-group-title">action-1 uuid</li>
             <li class="item-content">
-              <div class="item-inner">
-                <div class="item-title">uuid</div>
+              <div class="item-inner device-item">
+                <div class="item-title"></div>
                 <div class="item-after" id="action-1-uuid"></div>
               </div>
             </li>
             <li class="item-content">
-              <div class="item-inner">
+              <div class="item-inner device-item">
                 <div class="item-title">token</div>
                 <div class="item-after" id="action-1-token"></div>
               </div>
             </li>
           </ul>
         </div>
-
       </div>
     </div>
   </div>
