--- a/manage/views/index.html
+++ b/manage/views/index.html
@@ -7,7 +7,6 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <title>IDCFチャンネルサーバー管理</title>
     <link rel="stylesheet" href="/css/vendor.css">
-    <link rel="stylesheet" href="/css/bundle.css">
   </head>
   <body>
     <div class="statusbar-overlay"></div>
@@ -30,13 +29,38 @@
         <div class="pages navbar-through toolbar-through">
           <div data-page="index" class="page">
             <div class="page-content">
-              <div class="content-block-title">メニュー</div>
+
+              <div class="content-block-title">サーバー情報</div>
+              <div class="list-block">
+                <ul>
+                  <li class="item-content">
+                    <div class="item-inner device-item">
+                      <div class="item-title" id="ipaddress"></div>
+                    </div>
+                  </li>
+                </ul>
+              </div>
+
+              <div class="content-block-title">デバイス</div>
               <div class="list-block">
                 <ul>
                   <li>
                     <a href="/devices.html" id="currency_link" class="item-link item-content">
                       <div class="item-inner">
-                        <div class="item-title">デバイス一覧</div>
+                        <div class="item-title">リスト</div>
+                      </div>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+
+              <div class="content-block-title">SensorTag</div>
+              <div class="list-block">
+                <ul>
+                  <li>
+                    <a href="/sensortag.html" id="currency_link" class="item-link item-content">
+                      <div class="item-inner">
+                        <div class="item-title">閾値設定</div>
                       </div>
                     </a>
                   </li>
@@ -50,5 +74,9 @@
 </div>
 <script type="text/javascript" src="/js/vendor.js"></script>
 <script type="text/javascript" src="/js/bundle.js"></script>
+<script type="text/javascript" src="https://cdn.octoblu.com/js/meshblu/latest/meshblu.bundle.js"></script>
+<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-sparklines/2.1.2/jquery.sparkline.min.js"></script>
+
 </body>
 </html>
