--- a/manage/views/devices.html
+++ b/manage/views/devices.html
@@ -2,14 +2,11 @@
   <div class="navbar-inner">
     <div class="left">
       <a href="#" class="back link">
-        <i class="icon icon-back-blue"></i>
+        <i class="icon icon-back"></i>
         <span>Back</span>
        </a>
     </div>
-    <div class="center sliding">デバイスリスト</div>
-    <div class="right">
-      <a href="#" class="link icon-only open-panel"><i class="icon icon-bars-blue"></i></a>
-    </div>
+    <div class="center sliding">デバイス一覧</div>
   </div>
 </div>
 <div class="pages">
