--- a/manage/views/devices.html
+++ b/manage/views/devices.html
@@ -6,7 +6,7 @@
         <span>Back</span>
        </a>
     </div>
-    <div class="center sliding">デバイス一覧</div>
+    <div class="center sliding">Devices List</div>
   </div>
 </div>
 <div class="pages">
