--- a/manage/views/sensortag.html
+++ b/manage/views/sensortag.html
@@ -6,7 +6,7 @@
         <span>Back</span>
        </a>
     </div>
-    <div class="center sliding">SensorTagモニター</div>
+    <div class="center sliding">SensorTag Monitor</div>
   </div>
 </div>
 <div class="pages">
