--- a/manage/views/index.html
+++ b/manage/views/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, minimal-ui">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <title>IDCF Chanel Management</title>
+    <title>IDCF Channel Management</title>
     <link rel="stylesheet" href="/css/vendor.css">
   </head>
   <body>
